solution part one

--- a/Dec01.ipynb
+++ b/Dec01.ipynb
@@ -2,17 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "1721\n",
-    "979\n",
-    "366\n",
-    "299\n",
-    "675\n",
-    "1456"
+    "import csv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('test_input.csv') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    data = list(reader)\n",
+    "    test = [int(i[0]) for i in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1721 299 2020 514579\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index,item in enumerate(test):\n",
+    "    tmp = test[:]\n",
+    "    del tmp[index]\n",
+    "    output = [item + num for num in tmp]\n",
+    "    \n",
+    "    if 2020 in output:\n",
+    "        num = tmp[output.index(2020)]\n",
+    "        print(item,num,item+num,item*num)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('puzzle_input.csv') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    data = list(reader)\n",
+    "    puzzle = [int(i[0]) for i in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "247 1773 2020 437931\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index,item in enumerate(puzzle):\n",
+    "    tmp = puzzle[:]\n",
+    "    del tmp[index]\n",
+    "    output = [item + num for num in tmp]\n",
+    "    \n",
+    "    if 2020 in output:\n",
+    "        num = tmp[output.index(2020)]\n",
+    "        print(item,num,item+num,item*num)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
